Migrate to bootstrap

--- a/lib/adopt_a_family_web/templates/user/edit.html.eex
+++ b/lib/adopt_a_family_web/templates/user/edit.html.eex
@@ -1,6 +1,18 @@
-<h1>Edit User</h1>
-
-<%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :update, @user)) %>
-
-<span><%= link "Delete Account", to: Routes.user_path(@conn, :delete, @user), method: :delete, data: [confirm: "Are you sure?"] %></span>
-<span> | <%= link "Back", to: Routes.page_path(@conn, :index) %></span>
+<div class='row justify-content-center'>
+  <div class='col-6'>
+    <div class='card'>
+      <h1 class='card-header'>Edit User</h1>
+      <div class='card-body'>
+        <%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :update, @user)) %>
+      </div>
+      <div class='card-footer'>
+        <span>
+          <%= link "Delete Account", to: Routes.user_path(@conn, :delete, @user), method: :delete, data: [confirm: "Are you sure?"] %>
+        </span>
+        <span class='float-right'>
+          <%= link "Back", to: Routes.page_path(@conn, :index) %>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
