--- a/lib/adopt_a_family_web/templates/user/new.html.eex
+++ b/lib/adopt_a_family_web/templates/user/new.html.eex
@@ -1,5 +1,15 @@
-<h1>New User</h1>
-
-<%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
-
-<span><%= link "Back", to: Routes.page_path(@conn, :index) %></span>
+<div class='row justify-content-center'>
+  <div class='col-6'>
+    <div class='card'>
+      <h1 class='card-header'>New User</h1>
+      <div class='card-body'>
+        <%= render "form.html", Map.put(assigns, :action, Routes.user_path(@conn, :create)) %>
+      </div>
+      <div class='card-footer'>
+        <span class='float-right'>
+          <%= link "Back", to: Routes.session_path(@conn, :create) %>
+        </span>
+      </div>
+    </div>
+  </div>
+</div>
