--- a/lib/adopt_a_family_web/templates/layout/app.html.eex
+++ b/lib/adopt_a_family_web/templates/layout/app.html.eex
@@ -4,26 +4,44 @@
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>AdoptAFamily · Phoenix Framework</title>
+    <title>Adopt A Family Gift Tracking</title>
     <link rel="stylesheet" href="<%= Routes.static_path(@conn, "/css/app.css") %>"/>
   </head>
-  <body>
+  <body class="bg-secondary">
     <header>
       <section class="container">
-        <nav role="navigation">
-          <ul>
-            <li><a href="https://hexdocs.pm/phoenix/overview.html">Get Started</a></li>
-          </ul>
-        </nav>
-        <a href="http://phoenixframework.org/" class="phx-logo">
-          <img src="<%= Routes.static_path(@conn, "/images/phoenix.png") %>" alt="Phoenix Framework Logo"/>
-        </a>
+        <h1>Adopt A Family Gift Tracking</h1>
+        <%= if signed_in?(@conn) do %>
+          <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav mr-auto justify-content-end">
+                <li class="nav-item">
+                  <%= link "Home", to: Routes.page_path(@conn, :index), class: "nav-link" %>
+                </li>
+                <li class="nav-item dropdown">
+                  <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <%= @current_user.name %>
+                  </a>
+                  <div class="dropdown-menu" id="navbarDropdown">
+                    <%= link "Manage Account", to: Routes.user_path(@conn, :edit, @current_user), class: "dropdown-item" %>
+                    <div class="dropdown-divider"></div>
+                    <%= link "Logout", to: Routes.session_path(@conn, :delete), method: :delete, class: "dropdown-item" %>
+                  </div>
+                </li>
+              </ul>
+            </div>
+          </nav>
+        <% end %>
       </section>
     </header>
-    <main role="main" class="container">
+    <main role="main" class="container mt-3">
+    <%= unless is_nil(get_flash(@conn, :info)) do %>
       <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+    <% end %>
+    <%= unless is_nil(get_flash(@conn, :error)) do %>
       <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
-      <%= render @view_module, @view_template, assigns %>
+    <% end %>
+    <%= render @view_module, @view_template, assigns %>
     </main>
     <script type="text/javascript" src="<%= Routes.static_path(@conn, "/js/app.js") %>"></script>
   </body>
